Hoax Deletion Operation is Done.
Implement Account Deletion UI for extra.

--- a/frontend/src/bootstrap-override.scss
+++ b/frontend/src/bootstrap-override.scss
@@ -1,3 +1,11 @@
 $primary: rgb(0, 153, 255);
 @import '~bootstrap/scss/bootstrap.scss';
 @import '~bootstrap-icons/font/bootstrap-icons.css';
+
+.btn-delete-link{
+    color: $gray-600;
+}
+
+.btn-delete-link:hover {
+    color: $danger;
+}
